# resources

Miscellaneous/Toolchains/Premake/: Index.md
OpenGL/Setup Guide/Premake5 and OpenGL/: Index.md
OpenGL/Setup Guide/Premake5 and OpenGL/resources/: premake5.lua
OpenGL/WindowsSetupGuide/SettingUpVisualStudio/: guide.md
Raytracing/Introduction/: Index.md  main.md  references.bib
guides/OpenGLForWindows.1/: guide.md
guides/SettingUpVisualStudio/: guide.md
guides/SettingUpVisualStudio/resources/TestApplication/: TestApplication.sln
guides/SettingUpVisualStudio/resources/TestApplication/TestApplication/: TestApplication.vcxproj
ray tracing/ray tracing tutorial series vchizhov/: index.html  index.md.html
ray tracing/ray tracing tutorial series vchizhov/ray_casting/part0/: intersecting_a_sphere.html  intersecting_a_sphere.md.html
ray tracing/ray tracing tutorial series vchizhov/ray_casting/part1/: intersecting_a_sphere.md.html
ray tracing/ray tracing tutorial series vchizhov/ray_casting/part2/: adding_integrators.md.html
ray tracing/ray tracing tutorial series vchizhov/ray_casting/part2/code/: CMakeLists.txt
ray tracing/ray tracing tutorial series vchizhov/ray_casting/part2/code/src/: main.cpp
ray tracing/ray tracing tutorial series vchizhov/ray_casting/part2/code/src/core/: camera.hpp  image.hpp  integrator.hpp  intersection.hpp  light.hpp  ray.hpp  scene.hpp  sphere.hpp
ray tracing/ray tracing tutorial series vchizhov/ray_casting/part2/code/src/core/math/: math.hpp  vec.hpp
(+2 files in other folders)
